// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`lib/notion/factor/meals > GET /notion/factor-meals/:key > returns factor meals 1`] = `
[
  {
    "description": "with Tomato Relish, Roasted Zucchini & Parmesan-Basil Butter",
    "name": "Basil Corn Risotto & Shredded Beef",
    "rating": "Considering",
  },
  {
    "description": "with Scallion Green Beans & Carrots",
    "name": "Creamy Garlic Chicken & Broccoli Penne",
    "rating": "★★★☆",
  },
  {
    "description": "with Parmesan Cauliflower",
    "name": "Cheesy Pimento Chicken Pasta",
    "rating": "★★★★",
  },
  {
    "description": "with Pineapple-Coconut Rice, Sesame Broccoli & "Teriyaki" Sauce",
    "name": "Hawaiian-Style Shredded Chicken",
    "rating": "Uninterested",
  },
  {
    "description": "with Roasted Zucchini & Parmesan Herb Butter",
    "name": "Tomato & Romano Chicken",
    "rating": "Considering",
  },
]
`;

exports[`lib/notion/factor/meals > GET /notion/factor-meals/:key > returns factor meals with multiple pages of meals 1`] = `
[
  {
    "description": "with Roasted Tomatoes, Italian Cheese Blend & Garlic Broccoli",
    "name": "Pesto Chicken & Roasted Mushrooms",
    "rating": "★☆☆☆",
  },
  {
    "description": "with Sauteed Kale & Garlicky Green Beans",
    "name": "Four-Cheese Tortellini & Italian Sausage Pizzaiola",
    "rating": "Diet-restricted",
  },
  {
    "description": "with Garlic Kale & Pesto Zucchini",
    "name": "Creamy Tomato-Basil Shrimp",
    "rating": "★★☆☆",
  },
  {
    "description": "with Sour Cream & Chive Mashed Potatoes, Roasted Green Beans & Pearl Onions",
    "name": "Honey-Mustard Pork Chop",
    "rating": "Considering",
  },
  {
    "description": "with Roasted Carrots, Jalapeño Mac ’n’ Cheese & Broccoli with Chili-Garlic Butter",
    "name": "Smoky Tomato Chicken",
    "rating": "★★★☆",
  },
  {
    "description": "with Tomato Relish, Roasted Zucchini & Parmesan-Basil Butter",
    "name": "Basil Corn Risotto & Shredded Beef",
    "rating": "Considering",
  },
  {
    "description": "with Scallion Green Beans & Carrots",
    "name": "Creamy Garlic Chicken & Broccoli Penne",
    "rating": "★★★☆",
  },
  {
    "description": "with Parmesan Cauliflower",
    "name": "Cheesy Pimento Chicken Pasta",
    "rating": "★★★★",
  },
  {
    "description": "with Pineapple-Coconut Rice, Sesame Broccoli & "Teriyaki" Sauce",
    "name": "Hawaiian-Style Shredded Chicken",
    "rating": "Uninterested",
  },
  {
    "description": "with Roasted Zucchini & Parmesan Herb Butter",
    "name": "Tomato & Romano Chicken",
    "rating": "Considering",
  },
]
`;

exports[`lib/notion/factor/meals > POST /notion/factor-meals/:key > adds meal to data source 1`] = `
{
  "parent": {
    "data_source_id": "meals-id",
  },
  "properties": {
    "Date": {
      "date": {
        "start": "2021-12-01",
      },
    },
    "Description": {
      "rich_text": [
        {
          "text": {
            "content": "meal description",
          },
          "type": "text",
        },
      ],
    },
    "Name": {
      "title": [
        {
          "text": {
            "content": "meal name",
          },
          "type": "text",
        },
      ],
    },
    "Rating": {
      "select": {
        "name": "Considering",
      },
    },
  },
}
`;

exports[`lib/notion/factor/meals > POST /notion/factor-meals/:key > date can be omitted 1`] = `
{
  "parent": {
    "data_source_id": "meals-id",
  },
  "properties": {
    "Description": {
      "rich_text": [
        {
          "text": {
            "content": "meal description",
          },
          "type": "text",
        },
      ],
    },
    "Name": {
      "title": [
        {
          "text": {
            "content": "meal name",
          },
          "type": "text",
        },
      ],
    },
    "Rating": {
      "select": {
        "name": "Diet-restricted",
      },
    },
  },
}
`;

exports[`lib/notion/factor/meals > POST /notion/factor-meals/:key > uses the right year for "earlier" month 1`] = `
{
  "parent": {
    "data_source_id": "meals-id",
  },
  "properties": {
    "Date": {
      "date": {
        "start": "2022-01-18",
      },
    },
    "Description": {
      "rich_text": [
        {
          "text": {
            "content": "meal description",
          },
          "type": "text",
        },
      ],
    },
    "Name": {
      "title": [
        {
          "text": {
            "content": "meal name",
          },
          "type": "text",
        },
      ],
    },
    "Rating": {
      "select": {
        "name": "Uninterested",
      },
    },
  },
}
`;
